force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <label>Objectif</label>
    <nameField>
        <label>Goal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objectifs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>