force-app/main/default/objects/Goal__c/fields/is_active__c.field-meta.xml
<CustomField>
    <fullName>is_active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is active</label>
    <type>Checkbox</type>
</CustomField>