force-app/main/default/objects/Goal__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Journalier</fullName>
                <default>true</default>
                <label>Journalier</label>
            </value>
            <value>
                <fullName>Hebdomadaire</fullName>
            </value>
            <value>
                <fullName>Mensuel</fullName>
            </value>
            <value>
                <fullName>Trimestriel</fullName>
            </value>
            <value>
                <fullName>Annuel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>