force-app/main/default/objects/Goal__c/recordTypes/Dermato_Goal_RT.recordType-meta.xml
<RecordType>
    <fullName>Dermato_Goal_RT</fullName>
    <active>true</active>
    <label>Dermato Goal RT</label>
</RecordType>