force-app/main/default/objects/Goal__c/listViews/Tous.listView-meta.xml
<ListView>
    <fullName>Tous</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Tous</label>
</ListView>